<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:visibility="visible">

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_lockscreen"
		app:iconSpaceReserved="false">

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_single_tap_sleep"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/pref_single_tap_sleep_title"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_double_tap_wake"
			android:summaryOn="@string/pref_double_tap_wake_summary"
			android:summaryOff="@string/pref_double_tap_wake_summary"
			android:title="@string/pref_double_tap_wake_title"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_shuffle_pin"
			android:summaryOn="@string/pref_shuffle_pin_summary"
			android:summaryOff="@string/pref_shuffle_pin_summary"
			android:title="@string/pref_shuffle_pin_title"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_lockscreen_flashlight_tap"
			android:summaryOn="@string/pref_lockscreen_flashlight_tap_summary"
			android:summaryOff="@string/pref_lockscreen_flashlight_tap_summary"
			android:title="@string/pref_lockscreen_flashlight_tap_title"
			app:iconSpaceReserved="false" />

	</com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_depth_wallpaper"
		app:iconSpaceReserved="false">

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_depth_wallpaper_enabled"
			android:summaryOff="@string/pref_depth_wallpaper_summary"
			android:summaryOn="@string/pref_depth_wallpaper_summary"
			android:title="@string/pref_depth_wallpaper_title"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialPreference
			android:key="pref_depth_wallpaper_status"
			android:title="@string/pref_depth_wallpaper_status_title"
			android:summary="@string/pref_depth_wallpaper_status_disabled"
			android:selectable="false"
			android:dependency="pref_depth_wallpaper_enabled"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialSeekBarPreference
			android:key="pref_depth_wallpaper_opacity"
			android:title="@string/pref_depth_wallpaper_opacity_title"
			android:defaultValue="100"
			android:max="100"
			app:min="1"
			app:showSeekBarValue="true"
			android:dependency="pref_depth_wallpaper_enabled"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialSeekBarPreference
			android:key="pref_depth_wallpaper_crop"
			android:title="@string/pref_depth_wallpaper_crop_title"
			android:defaultValue="62"
			android:max="100"
			app:min="30"
			app:showSeekBarValue="true"
			android:dependency="pref_depth_wallpaper_enabled"
			app:iconSpaceReserved="false" />

	</com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

</PreferenceScreen>
