<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:visibility="visible">

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_display"
		app:iconSpaceReserved="false">

		<com.nothingxpert.ui.preferences.MaterialListPreference
			android:key="pref_max_refresh_rate"
			android:title="@string/pref_max_refresh_rate_title"
			android:summary="%s"
			android:defaultValue="default"
			android:entries="@array/max_refresh_rate_entries"
			android:entryValues="@array/max_refresh_rate_values"
			app:iconSpaceReserved="false" />

	</com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_misc"
		app:iconSpaceReserved="false">

        <com.nothingxpert.ui.preferences.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="pref_allow_secure_screenshot"
            android:summaryOn="@string/pref_allow_secure_summary"
            android:summaryOff="@string/pref_allow_secure_summary"
            android:title="@string/pref_allow_secure_title"
            app:iconSpaceReserved="false" />

        <com.nothingxpert.ui.preferences.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="pref_shake_torch"
            android:summaryOn="@string/pref_shake_torch_summary"
            android:summaryOff="@string/pref_shake_torch_summary"
            android:title="@string/pref_shake_torch_title"
            app:iconSpaceReserved="false" />

        <com.nothingxpert.ui.preferences.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="pref_hide_ime_bar"
            android:summaryOn="@string/pref_hide_ime_bar_summary"
            android:summaryOff="@string/pref_hide_ime_bar_summary"
            android:title="@string/pref_hide_ime_bar_title"
            app:iconSpaceReserved="false" />

        <com.nothingxpert.ui.preferences.MaterialSwitchPreference
            android:key="pref_expand_community_widget_limit"
            android:title="@string/pref_expand_community_widget_limit_title"
            android:summaryOn="@string/pref_expand_community_widget_limit_summary"
            android:summaryOff="@string/pref_expand_community_widget_limit_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_floating_window"
		app:iconSpaceReserved="false">

		<com.nothingxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="pref_floating_window_enabled"
			android:summaryOn="@string/pref_floating_window_summary"
			android:summaryOff="@string/pref_floating_window_summary"
			android:title="@string/pref_floating_window_title"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialListPreference
			android:key="pref_floating_window_size"
			android:title="@string/pref_floating_window_size_title"
			android:summary="%s"
			android:defaultValue="small"
			android:entries="@array/floating_window_size_entries"
			android:entryValues="@array/floating_window_size_values"
			android:dependency="pref_floating_window_enabled"
			app:iconSpaceReserved="false" />

	</com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

	<com.nothingxpert.ui.preferences.MaterialPreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:title="@string/pref_category_remap_buttons"
		app:iconSpaceReserved="false">

		<com.nothingxpert.ui.preferences.MaterialListPreference
			android:key="pref_volume_up_action"
			android:title="@string/pref_volume_up_action_title"
			android:summary="%s"
			android:defaultValue="0"
			android:entries="@array/volume_action_entries"
			android:entryValues="@array/volume_action_values"
			app:iconSpaceReserved="false" />

		<com.nothingxpert.ui.preferences.MaterialListPreference
			android:key="pref_volume_down_action"
			android:title="@string/pref_volume_down_action_title"
			android:summary="%s"
			android:defaultValue="0"
			android:entries="@array/volume_action_entries"
			android:entryValues="@array/volume_action_values"
			app:iconSpaceReserved="false" />

	</com.nothingxpert.ui.preferences.MaterialPreferenceCategory>

</PreferenceScreen>
